Refactorisation du code et utilisation de Identity Framework

--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Home/Index.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Home/Index.cshtml
@@ -4,5 +4,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Home</h2>
+<br/>
+<br />
+<br />
+<br />
+
+<br />
+<center><h2>    Bienvenue dans AcmeSytem...!</h2></center>
 
