--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -14,3 +14,17 @@
    asp-route-category="">
     Contact
 </a>
+
+<a class="btn btn-block btn-secondary"
+   asp-action="List"
+   asp-controller="Account"
+   asp-route-category="">
+    Accounts
+</a>
+
+<a class="btn btn-block btn-secondary"
+   asp-action="Index"
+   asp-controller="Logout"
+   asp-route-category="">
+    Logout
+</a>
