properly display accounts

--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -17,7 +17,7 @@
 
 <a class="btn btn-block btn-secondary"
    asp-action="List"
-   asp-controller="Account"
+   asp-controller="Compte"
    asp-route-category="">
     Accounts
 </a>
