--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/Edit.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/Edit.cshtml
@@ -2,6 +2,8 @@
 
 @{
     ViewData["Title"] = "Edit";
+        Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <h1>Edit</h1>
@@ -39,6 +41,6 @@
     <a asp-action="Index">Back to List</a>
 </div>
 
-@section Scripts {
+@*@section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
-}
+}*@
