--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/Delete.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/Delete.cshtml
@@ -7,9 +7,8 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this account?</h3>
 <div>
-    <h4>Compte</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -17,18 +16,6 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Nom)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreation)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateCreation)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.DateModification)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.DateModification)
         </dd>
     </dl>
 
