--- a/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/List.cshtml
+++ b/AcmeSytem/Code/AcmeSystem.Presentation.ClientWeb/Views/Compte/List.cshtml
@@ -17,7 +17,7 @@
                 <div>
                     <a class="btn btn-primary"
                        asp-action="Edit"
-                       id="@c.Id"
+                       asp-route-id="@c.Id"
                        asp-controller="compte"
                        asp-route-category="">
                         update
@@ -27,21 +27,10 @@
                        asp-for="@c.Id"
                        asp-action="delete"
                        asp-controller="compte"
+                       asp-route-id="@c.Id"
                        asp-route-category="">
                         delete
                     </a>
-                    <form asp-action="Delete">
-                        <input type="hidden" asp-for="@c.Id" />
-                        <input type="submit" value="Delete" class="btn btn-danger" id="@c.Id" /> |
-                        <a asp-action="Index">Back to List</a>
-                    </form>
-                    @*<a asp-action="Delete"asp-for="@c.Id"></a>
-        <form >
-            <input type="hidden" asp-for="@c.Id" />
-            <input type="submit" value="Update" class="btn btn-primary" />
-            <input type="submit" value="Delete" class="btn btn-danger" />
-        </form>*@
-
                 </div>
             </div>
         </div>
